# my_lvgl

./: CMakeLists.txt  README.md  lvgl_init.c  lvgl_init.h  my_lvgl.c
libraries/: CMakeLists.txt  lv_conf.h
libraries/comp/: 3outof6.c  CMakeLists.txt  cc1101.c  cc1101.h  crc.c  ili9488.c  ili9488.h  interrupt.c  interrupt.h  mbus_packet.c
ui/: screens.c  screens.h
